# advent-of-code

./: .gitignore  LICENSE  README.md
scripts-2023/: CMakeLists.txt  README.md  common.cpp  common.hpp
scripts-2023/day01/: main.cpp
scripts-2023/day02/: main.cpp
scripts-2023/day03/: main.cpp
scripts-2023/day04/: main.cpp
scripts-2023/day05/: main.cpp
scripts-2023/day06/: main.cpp
scripts-2023/day07/: main.cpp
scripts-2023/day08/: main.cpp
scripts-2023/day09/: main.cpp
scripts-2023/day10/: main.cpp
