cmake_minimum_required(VERSION 3.23)
project(advent-of-code-2023)

set(CMAKE_CXX_STANDARD 23)
set(COMMON_FILES common.cpp common.hpp)

add_executable(AOF_day01 day01/main.cpp ${COMMON_FILES})
add_executable(AOF_day02 day02/main.cpp ${COMMON_FILES})
add_executable(AOF_day03 day03/main.cpp ${COMMON_FILES})
add_executable(AOF_day04 day04/main.cpp ${COMMON_FILES})
add_executable(AOF_day05 day05/main.cpp ${COMMON_FILES})
add_executable(AOF_day06 day06/main.cpp ${COMMON_FILES})
add_executable(AOF_day07 day07/main.cpp ${COMMON_FILES})
add_executable(AOF_day08 day08/main.cpp ${COMMON_FILES})
add_executable(AOF_day09 day09/main.cpp ${COMMON_FILES})
add_executable(AOF_day10 day10/main.cpp ${COMMON_FILES})
# add_executable(AOF_day10 day10/main.cpp)
# add_executable(AOF_day11 day11/main.cpp)
# add_executable(AOF_day12 day12/main.cpp)
# add_executable(AOF_day13 day13/main.cpp)
# add_executable(AOF_day14 day14/main.cpp)
# add_executable(AOF_day15 day15/main.cpp)
# add_executable(AOF_day16 day16/main.cpp)
# add_executable(AOF_day17 day17/main.cpp)
# add_executable(AOF_day18 day18/main.cpp)
# add_executable(AOF_day19 day19/main.cpp)
# add_executable(AOF_day20 day20/main.cpp)
# add_executable(AOF_day21 day21/main.cpp)
# add_executable(AOF_day22 day22/main.cpp)
# add_executable(AOF_day23 day23/main.cpp)
# add_executable(AOF_day24 day24/main.cpp)